--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "http://rickazuo.github.io/portfolio/",
+  "homepage": "http://rickazuo.github.io/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
